# devops-hands-on-project-hivebox

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Taskfile.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  scorecard.yml
