[project]
name = "devops-hands-on-project-hivebox"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdelrahman Altamimi",email = "tamimi6030@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker (==1.9.0)",
    "click (==8.1.8)",
    "flask (==3.1.0)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.2)",
    "werkzeug (==3.1.3)",
    "requests (==2.32.3)",
    "gunicorn (==23.0.0)",
    "pytz (>=2025.2,<2026.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
